llvm/test/tools/llubi/wildcard_provenance_gep_inbounds.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "e-p:64:64:64"

define void @main() {
  %p1 = alloca i32
  %p2 = alloca i32
  %addr1 = ptrtoint ptr %p1 to i64
  %addr2 = ptrtoint ptr %p2 to i64
  %diff = sub i64 %addr2, %addr1
  %p = inttoptr i64 %addr1 to ptr
  %p_off = getelementptr inbounds i8, ptr %p, i64 %diff
  store i32 0, ptr %p_off

  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %p1 = alloca i32, align 4 => ptr 0x8 [p1]
; CHECK-NEXT:   %p2 = alloca i32, align 4 => ptr 0x10 [p2]
; CHECK-NEXT:   %addr1 = ptrtoint ptr %p1 to i64 => i64 8
; CHECK-NEXT:   %addr2 = ptrtoint ptr %p2 to i64 => i64 16
; CHECK-NEXT:   %diff = sub i64 %addr2, %addr1 => i64 8
; CHECK-NEXT:   %p = inttoptr i64 %addr1 to ptr => ptr 0x8 [wildcard]
; CHECK-NEXT:   %p_off = getelementptr inbounds i8, ptr %p, i64 %diff => poison
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 0, ptr %p_off, align 4 at @main <stdin>:14
; CHECK-NEXT: Immediate UB detected: Invalid memory access with a poison pointer.
; CHECK-NEXT: error: Execution of function 'main' failed.
